# unnamed

./: .gitignore  CMakeLists.txt
CRen/: CMakeLists.txt
CRen/Documentation/: index.html  script.js  styles.css
CRen/Documentation/api/: reference.html  script.js  styles.css
CRen/Documentation/api/docs/buffer/: BufferCamera.html  BufferConstant.html  BufferQuad.html  cren_buffer.h.html
CRen/Documentation/api/docs/camera/: cren_camera.h.html  cren_camera_create.html  cren_camera_destroy.html  cren_camera_get_aspect_ratio.html  cren_camera_get_fov.html  cren_camera_get_front.html  cren_camera_get_lock.html  cren_camera_get_perspective.html  cren_camera_get_perspective_inverse.html  cren_camera_get_position.html  cren_camera_get_speed_modifier.html  cren_camera_get_view.html  cren_camera_get_view_inverse.html  cren_camera_move.html  cren_camera_rotate.html  cren_camera_set_aspect_ratio.html  cren_camera_set_lock.html  cren_camera_set_speed_modifier.html  cren_camera_translate.html  cren_camera_update.html
CRen/Documentation/api/docs/context/: CRenCreateInfo.html  cren_are_validations_enabled.html  cren_context.h.html  cren_create_id.html  cren_create_renderer.html  cren_get_framebuffer_size.html  cren_get_main_camera.html  cren_get_mousepos.html  cren_get_msaa.html  cren_get_user_pointer.html  cren_get_viewport_pos.html  cren_get_viewport_size.html  cren_get_vulkan_backend.html  cren_initialize.html  cren_minimize.html  cren_pick_object.html  cren_register_id.html  cren_render.html  cren_resize.html  cren_restore.html  cren_set_create_vulkan_surface_callback.html  cren_set_draw_ui_raw_data_callback.html  cren_set_framebuffer_size.html  cren_set_get_vulkan_instance_required_extensions_callback.html  cren_set_mousepos.html  cren_set_render_callback.html  cren_set_resize_callback.html  cren_set_ui_image_count_callback.html  cren_set_user_pointer.html  cren_set_viewport_pos.html  cren_set_viewport_size.html  cren_shutdown.html  cren_unregister_id.html  cren_update.html  cren_using_custom_viewport.html  cren_using_vsync.html
CRen/Documentation/api/docs/defines/: CREN_API.html  align_as.html  cren_defines.h.html
CRen/Documentation/api/docs/error/: cren_error.h.html  cren_log_message.html
CRen/Documentation/api/docs/platform/: cren_detect_platform.html  cren_get_path.html  cren_load_file.html  cren_platform.h.html  cren_stbimage_destroy.html  cren_stbimage_get_error.html  cren_stbimage_load_from_file.html
CRen/Documentation/api/docs/primitives/: cren_primitives.h.html  cren_quad_create.html  cren_quad_destroy.html  cren_quad_get_billboard.html  cren_quad_get_id.html  cren_quad_get_lock_axis_x.html  cren_quad_render.html  cren_quad_set_billboard.html  cren_quad_set_lock_axis_x.html  cren_quad_set_lock_axis_y.html  cren_quad_update.html  cren_texture2d_create_from_buffer.html  cren_texture2d_create_from_path.html  cren_texture2d_destroy.html
CRen/Documentation/api/docs/types/: CRen_CameraDirection.html  CRen_CameraType.html  CRen_MSAA.html  CRen_Platform.html  CRen_RenderStage.html  CRen_RendererAPI.html  CRen_ShaderType.html  CRen_VertexComponent.html  cren_types.h.html
CRen/Source/: CRen.h  cren.h  cren_buffer.h  cren_callbacks.h  cren_camera.c  cren_camera.h  cren_context.c  cren_context.h  cren_defines.h  cren_error.c  cren_error.h  cren_fun.c  cren_fun.h  cren_platform.c  cren_platform.h  cren_primitives.c  cren_primitives.h  cren_types.h
CRen/Source/Vulkan/: crenvk_buffer.c  crenvk_buffer.h  crenvk_context.c  crenvk_context.h  crenvk_core.c  crenvk_core.h  crenvk_fun.c  crenvk_fun.h  crenvk_pipeline.c  crenvk_pipeline.h  crenvk_primitives.c  crenvk_primitives.h  crenvk_renderphase.c  crenvk_renderphase.h
Editor/: CMakeLists.txt
Editor/Source/: main.cpp
Editor/Source/Core/: Editor.cpp  Editor.h
Editor/Source/UI/: Dockspace.cpp  Dockspace.h  Viewport.cpp  Viewport.h
Engine/: CMakeLists.txt
Engine/Source/: Cosmos.h
Engine/Source/Core/: Application.cpp  Application.h  Defines.h  Input.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Engine/Source/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  World.cpp  World.h
Engine/Source/UI/: GUI.cpp  GUI.h  Gizmos.cpp  Gizmos.h  Icons.h  Widget.cpp  Widget.h  WidgetTypes.h
Engine/Source/Util/: Container.h  Datafile.h  ID.h  Library.h  Memory.h  Stack.h
